# NumericConcepts

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
.github/workflows/: ci.yml
application/: CMakeLists.txt  main.cpp
cmake/: NumericConceptsConfig.cmake.in
docs/: mainpage.md
examples/: CMakeLists.txt  ex1.cpp
include/: NumericConcepts.hpp
include/NC/: Functions.hpp  Numeric.hpp  Ranges.hpp
include/NumericConcepts/: Functions.hpp  Iterators.hpp  Numeric.hpp  NumericConcepts.hpp  Ranges.hpp
tests/: CMakeLists.txt  test_functions.cpp  test_iterators.cpp  test_numeric.cpp  test_ranges.cpp
